some more init web ui

--- a/code/MIDI_Controller_Box/website/index.html
+++ b/code/MIDI_Controller_Box/website/index.html
@@ -12,9 +12,17 @@
 </head>
 <body>
 
-	TEST
+	<div id="screenPairing">
+		<div id="pairingText">
+			SEARCHING FOR SPEAKER
+		</div>
+	</div>
+
+	
+
 	<script type="text/javascript" src="src/testing.js"></script>
 	<script type="text/javascript" src="src/websocket.js"></script>
+	<script type="text/javascript" src="src/screens.js"></script>
 	<script type="text/javascript" src="src/main.js"></script>
 
 </body>
