working bi directional bluetooth

--- a/code/MIDI_Controller_Box/website/index.html
+++ b/code/MIDI_Controller_Box/website/index.html
@@ -18,7 +18,12 @@
 		</div>
 	</div>
 
-	
+	<div id="screenTracks">
+	  <h1> SONG LIST TEST </h1>
+	  <ul id="trackList">
+	    
+	  </ul>
+	</div>
 
 	<script type="text/javascript" src="src/testing.js"></script>
 	<script type="text/javascript" src="src/websocket.js"></script>
