progress init on website

--- a/code/MIDI_Controller_Box/website/index.html
+++ b/code/MIDI_Controller_Box/website/index.html
@@ -18,11 +18,41 @@
 		</div>
 	</div>
 
-	<div id="screenTracks">
-	  <h1> SONG LIST TEST </h1>
-	  <ul id="trackList">
-	    
-	  </ul>
+	<div id="mainDiv">
+		
+		<div id="spinningRecord">
+		</div>
+		<div id="startStopDiv">
+		</div>
+
+		<div id="sampleDiv">
+		</div>
+
+		<div id="audioDiv">
+			<div id="audioVisualize">
+			</div>
+			<div id="audioName">
+			</div>
+		</div>
+
+		<div id="gifDiv">
+			<div id="gifSwap">
+				<div id="gif0"></div>
+				<div id="gif1"></div>
+				<div id="gif2"></div>
+			</div>
+			<div id="gifSpeed">
+				50%
+			</div>
+		</div>
+		  
+		<div id="volumeDiv">
+		</div>
+
+		<div id="songSelect">
+		</div>
+		<div id="fxSelect">
+		</div>
 	</div>
 
 	<script type="text/javascript" src="src/testing.js"></script>
