menuo design added

--- a/code/MIDI_Controller_Box/website/index.html
+++ b/code/MIDI_Controller_Box/website/index.html
@@ -62,7 +62,6 @@
 			  <circle filter="url(#glow)" cx="75" cy="75" r="40" transform="rotate(180, 80,80)" />
 			</svg>
 		</div>
-		<div id="gifwheelCover"></div>
 
 		<div id="volumeDiv">
 			<div id="volumeSlider"></div>
@@ -70,8 +69,26 @@
 		</div>
 
 		<div id="songSelect">
+			<div class="selectHeader"> SONGS </div>
+			<div class="selectItem selectDir" id="selectSongUp">&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;</div>
+			<div class="selectItem" id="selectSong0"></div>
+			<div class="selectItem" id="selectSong1"></div>
+			<div class="selectItem" id="selectSong2"></div>
+			<div class="selectItem" id="selectSong3"></div>
+			<div class="selectItem" id="selectSong4"></div>
+			<div class="selectItem selectDir" id="selectSongDown">&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;</div>
+		</div>
+		<div id="instructionSelect">
 		</div>
 		<div id="fxSelect">
+			<div class="selectHeader"> SAMPLES </div>
+			<div class="selectItem selectDir" id="selectSampleUp">&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;&nbsp;&#x25B2;&nbsp;</div>
+			<div class="selectItem" id="selectSample0"></div>
+			<div class="selectItem" id="selectSample1"></div>
+			<div class="selectItem" id="selectSample2"></div>
+			<div class="selectItem" id="selectSample3"></div>
+			<div class="selectItem" id="selectSample4"></div>
+			<div class="selectItem selectDir" id="selectSampleDown">&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;&nbsp;&#x25BC;&nbsp;</div>
 		</div>
 	</div>
 
