--- a/code/MIDI_Controller_Box/website/index.html
+++ b/code/MIDI_Controller_Box/website/index.html
@@ -36,8 +36,8 @@
 			<canvas id="audioVisualize"></canvas>
 			<div id="audioName">				
 			</div>
-			<div id="audioArtist">				
-			</div>
+			<!-- <div id="audioArtist">				
+			</div> -->
 			<div id="audioStart">
 				0:00
 			</div>
